<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_rounded_corners"
    android:padding="16dp"
    android:focusableInTouchMode="true"
    >

    <RadioGroup
        android:id="@+id/rgOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbPlay"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/cardPlayer2"
            android:text="@string/play"
            android:paddingHorizontal="10dp"
            android:textColor="@color/cardPlay1"
            />


    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/typeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:boxBackgroundColor="@color/cardPlayer1"
        app:boxCornerRadiusBottomEnd="@dimen/fab_margin"
        app:boxCornerRadiusBottomStart="@dimen/fab_margin"
        app:boxCornerRadiusTopEnd="@dimen/fab_margin"
        app:boxCornerRadiusTopStart="@dimen/fab_margin"
        android:visibility="gone"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:inputType="none"/>


    </com.google.android.material.textfield.TextInputLayout>




    <EditText
        android:id="@+id/etTitlePLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/title"
        android:textColorHint="@color/green"
        android:textColor="@color/orange"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/etGesture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/gesture"
        android:textColorHint="@color/green"
        android:textColor="@color/orange"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/etPosition1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/position1"
        android:textColorHint="@color/exercise3"
        android:textColor="@color/orange"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/etPosition2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/position2"
        android:textColorHint="@color/exercise3"
        android:textColor="@color/orange"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/etPosition3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/position3"
        android:textColorHint="@color/exercise3"
        android:textColor="@color/orange"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/etPosition4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/position4"
        android:textColorHint="@color/exercise3"
        android:textColor="@color/orange"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/etPosition5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/position5"
        android:textColorHint="@color/exercise3"
        android:textColor="@color/orange"
        android:visibility="gone"
        />



    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/description"
        android:textColorHint="@color/green"
        android:textColor="@color/orange"
        android:visibility="gone"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teamsOptionLayoutPlays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:boxBackgroundColor="@color/cardPlayer1"
        app:boxCornerRadiusBottomEnd="@dimen/fab_margin"
        app:boxCornerRadiusBottomStart="@dimen/fab_margin"
        app:boxCornerRadiusTopEnd="@dimen/fab_margin"
        app:boxCornerRadiusTopStart="@dimen/fab_margin"
        android:visibility="gone"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTeamPlays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team"
            android:inputType="none"/>


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/addPlaysButtonDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        />


</LinearLayout>