<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_rounded_corners"
    android:padding="16dp"
    android:focusableInTouchMode="true"
    >

    <TextView
        android:id="@+id/eventTitleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/deleteEventGeneralTitle"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/green"
        android:textColor="@color/orange"
        />




    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cardInjured"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/trianglered"
        android:layout_gravity="center"
        app:cardCornerRadius="360dp" />

    <TextView
        android:id="@+id/etTitlePLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:hint="@string/deleteEventGeneralTitleQuestion"
        android:layout_margin="16dp"
        android:textColorHint="@color/green"
        android:textColor="@color/orange"
        />




    <Button
        android:id="@+id/deleteEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        />


</LinearLayout>